--- a/demo.html
+++ b/demo.html
@@ -1,127 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <link>
     <meta charset="UTF-8" />
     <title>Title</title>
-    <style>
-      .btn {
-        width: 130px;
-        height: 40px;
-        color: #fff;
-        border-radius: 5px;
-        padding: 10px 25px;
-        font-family: "Lato", sans-serif;
-        font-weight: 500;
-        background: transparent;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        position: relative;
-        display: inline-block;
-        box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
-          7px 7px 20px 0px rgba(0, 0, 0, 0.1),
-          4px 4px 5px 0px rgba(0, 0, 0, 0.1);
-        outline: none;
-      }
-
-      /* 3 */
-      .btn-3 {
-        background: rgb(0, 172, 238);
-        background: linear-gradient(
-          0deg,
-          rgba(0, 172, 238, 1) 0%,
-          rgba(2, 126, 251, 1) 100%
-        );
-        width: 130px;
-        height: 40px;
-        line-height: 42px;
-        padding: 0;
-        border: none;
-      }
-      .btn-3 span {
-        position: relative;
-        display: block;
-        width: 100%;
-        height: 100%;
-      }
-      .btn-3:before,
-      .btn-3:after {
-        position: absolute;
-        content: "";
-        right: 0;
-        top: 0;
-        background: rgba(2, 126, 251, 1);
-        transition: all 0.3s ease;
-      }
-      .btn-3:before {
-        height: 0%;
-        width: 2px;
-      }
-      .btn-3:after {
-        width: 0%;
-        height: 2px;
-      }
-      .btn-3:hover {
-        background: transparent;
-        box-shadow: none;
-      }
-      .btn-3:hover:before {
-        height: 100%;
-      }
-      .btn-3:hover:after {
-        width: 100%;
-      }
-      .btn-3 span:hover {
-        color: rgba(2, 126, 251, 1);
-      }
-      .btn-3 span:before,
-      .btn-3 span:after {
-        position: absolute;
-        content: "";
-        left: 0;
-        bottom: 0;
-        background: rgba(2, 126, 251, 1);
-        transition: all 0.3s ease;
-      }
-      .btn-3 span:before {
-        width: 2px;
-        height: 0%;
-      }
-      .btn-3 span:after {
-        width: 0%;
-        height: 2px;
-      }
-      .btn-3 span:hover:before {
-        height: 100%;
-      }
-      .btn-3 span:hover:after {
-        width: 100%;
-      }
-      .line{
-        flex:1;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
-      body,html{
-        width: 100vw;
-        height: 100vh;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: antiquewhite;
-      }
-      #app{
-        width: 300px;
-        min-height: 300px;
-        display: flex;
-        flex-direction: column;
-        align-items:center;
-        justify-content: flex-start;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./demo.css"></link>
   </head>
   <body>
     <script src="./lib/browser.js"></script>
@@ -134,6 +16,21 @@
           </div>
         <button class="btn btn-3" onclick="payment()">
           <span>payment</span>
+        </button>
+      </div>
+      <div class="line">
+        <div class="data">
+            <div class="name">processor</div>
+            <input id="processor" value="nextpay_processor"></input>
+          </div>
+      </div>
+      <div class="line">
+        <div class="data">
+            <div class="name">OrderId</div>
+            <input id="choose-order"></input>
+          </div>
+        <button class="btn btn-15" onclick="choose()">
+          choose
         </button>
       </div>
     </div>
@@ -151,12 +48,24 @@
         
           console.log(res);
           if(res.result){
+            document.querySelector("#choose-order").value = res.result.order_id
             document.querySelector("#order-id").innerHTML = `
             <a href="${res.result.redirect_url}" target="_blank"> ${res.result.order_id}<a>
             `
           }
         });
       };
+      const choose = () => {
+        
+        Beyounger.chooseChannel({
+          url: "/v1/choosePayment",
+          processor: document.querySelector("#processor").value,
+          orderId:  document.querySelector("#choose-order").value,
+          timStamp: Date.now(),
+          merchantId, 
+          apiSecret
+        })
+      }
     </script>
   </body>
 </html>
